--- a/Alura.LeilaoOnline/Alura.LeilaoOnline.Selenium/Alura.LeilaoOnline.Selenium.csproj
+++ b/Alura.LeilaoOnline/Alura.LeilaoOnline.Selenium/Alura.LeilaoOnline.Selenium.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="Selenium.Chrome.WebDriver" Version="85.0.0" />
+    <PackageReference Include="Selenium.Support" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
     <PackageReference Include="WebDriverManager" Version="2.11.2" />
     <PackageReference Include="xunit" Version="2.4.0" />
